--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "moment": "^2.29.3",
     "mongoose": "^6.4.1",
     "multer": "^1.4.5-lts.1",
+    "node": "^18.7.0",
     "nodemon": "^2.0.19"
   }
 }
